style: fix post alignment for user details

--- a/src/Components/Post.module.css
+++ b/src/Components/Post.module.css
@@ -28,6 +28,7 @@
   margin-bottom: 1rem;
   display: flex;
   gap: 1rem;
+  align-items: center;
 }
 
 .full-name {
